--- a/quartz-gui/pom.xml
+++ b/quartz-gui/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>com.quartzgui</groupId>
 	<artifactId>quartz-gui</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -74,6 +75,12 @@
 						<source>1.7</source>
 						<target>1.7</target>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.4</version>
+
 				</plugin>
 			</plugins>
 		</pluginManagement>
