--- a/quartz-gui/pom.xml
+++ b/quartz-gui/pom.xml
@@ -65,6 +65,11 @@
 			<version>2.9</version>
 		</dependency>
 		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>2.9</version>
+		</dependency>
+		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<version>2.2.1</version>
@@ -81,6 +86,11 @@
 					<groupId>c3p0</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.ext</groupId>
+			<artifactId>jersey-spring3</artifactId>
+			<version>2.9</version>
 		</dependency>
 	</dependencies>
 
